# hastic

./: Dockerfile  Makefile  README.md  docker-compose.yml
client/: .env.development  .env.production  README.md  package-lock.json  package.json  tsconfig.json
client/src/: App.vue  config.ts  main.ts  utils.ts
client/src/components/: AnlyticsStatus.vue  Graph.vue  HelloWorld.vue  ScatterPlot.vue  hastic_pod.ts
client/src/components/hastic_pod/: index.ts
client/src/router/: index.ts
client/src/services/: analytics.service.ts  auth.service.ts  data.service.ts  metrics.service.ts  segments.service.ts  segments.ts
client/src/store/: auth.module.ts  index.ts  types.ts
client/src/types/: colors.ts  detection.ts  index.ts  segment.ts  segment_array.ts  segment_set.ts  user.ts
client/src/types/analytic_units/: index.ts
client/src/views/: Home.vue  Login.vue  Model.vue
client/tests/unit/: example.spec.ts
server/: .gitignore  Cargo.toml  config.example.toml
server/src/: analytic_unit.rs  api.rs  config.rs  lib.rs  main.rs  services.rs  user_service.rs  utils.rs
server/src/api/: analytics.rs  auth.rs  metric.rs  mod.rs  segments.rs
server/src/services/: README.md  analytic_service.rs  analytic_unit_service.rs  data_service.rs  metric_service.rs  mod.rs  segments_service.rs  user_service.rs
server/src/services/analytic_service/: analytic_client.rs  analytic_service.rs  detection_runner.rs  mod.rs  pattern_detector.rs  types.rs
server/src/services/analytic_service/analytic_unit/: anomaly_analytic_unit.rs  mod.rs  pattern_analytic_unit.rs  pattern_detector.rs  threshold_analytic_unit.rs  types.rs
