[package]
name = "hastic"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
parking_lot = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fastrand = "1.5.0"
# subbeat = { path = "../../../subbeat/subbeat/" }
subbeat = "0.0.15"
config = "0.11.0"
openssl = { version = "=0.10.33", features = ["vendored"] }
rusqlite = "0.26.1"
# https://github.com/rusqlite/rusqlite/issues/914
libsqlite3-sys = { version = "*", features = ["bundled"] }
futures = "0.3.17"
chrono = "0.4.19"

gbdt = "0.1.1"
ndarray = "0.15.3"
bincode = "1.3.3"
async-trait = "0.1.51"
rustfft = "6.0.1"

# TODO: remove this from prod
# plotlib = "0.5.1"
